[tool.poetry]
name = "selection-vacancies"
version = "0.1.0"
description = ""
authors = ["gorag <gorbunov.alexey@gmail.com>"]
readme = "README.md"
packages = [{include = "selection_vacancies"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
